[package]
name = "erl_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"

